@startuml "OCP Example"

class "CompleteRobot" as CR {
  -ActionStep moveAction
  -Action curentAction
  -Speech speech

  +CompleteRobot(double x, double y, double radius)

  #changeMoveAction(ActionStep newMoveAction)
  #changeAction(Action newAction)

  #void act()
  #void act(Direction dir)
  +void gotoX(double destX, String destLabel)
  -void moveLeft()
  -void moveRight()
  #void say(String speechText)
}

class "SquattingCompleteRobot" as SCR {
  +SquattingCompleteRobot(double x, double y, double radius)
  
  +void squat()
}

class "HandWashingSquattingCompleteRobot" as HWCR {
    +HandWashingSquattingCompleteRobot(double x, double y, double radius)
    
    -boolean bothHandsCanFit(Touchable obj)
    -void soakHands()
    +void useBasin(Basin basin)
}

class "CrabCompleteRobot" as CCR {
  +CrabCompleteRobot(double x, double y, double radius)
}
CR <|-- CCR
CR <|-- SCR
SCR <|-- HWCR
@enduml